Add interrupt modifier
Text speed can now be 0 (instant)

OperatingSystem: remove Solaris since its deprecated